--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,22 +5,212 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorDark"
     tools:context=".activity.MainActivity">
 
-    <com.google.android.material.tabs.TabLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:id="@+id/tab_layout"
-        app:tabIndicatorFullWidth="true"
-        app:tabIndicatorGravity="center"
-        app:tabTextColor="@color/colorAccent"
-        app:tabIndicatorHeight="40dp"
-        app:tabIndicatorColor="@color/colorTab"
-        app:tabIndicator="@drawable/tab_indicator"/>
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/options_main"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/ic_baseline_menu_24"/>
+        <Button
+            android:id="@+id/search_bar_main"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_corner"/>
+    </LinearLayout>
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+            <Button
+                android:id="@+id/recent"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:backgroundTint="@color/colorWhite"
+                android:background="@drawable/ic_baseline_access_time_24">
+            </Button>
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+            <Button
+                android:id="@+id/favorite"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:backgroundTint="@color/colorWhite"
+                android:background="@drawable/ic_baseline_favorite_24"/>
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+            <Button
+                android:id="@+id/play_list"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:backgroundTint="@color/colorWhite"
+                android:background="@drawable/ic_baseline_playlist_play_24"/>
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+        </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+            <TextView
+                android:text="@string/recent"
+                android:textColor="@color/colorWhite"
+                android:gravity="center_horizontal" />
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+            <TextView
+                android:text="@string/favorites"
+                android:textColor="@color/colorWhite"
+                android:gravity="center_horizontal"/>
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+            <TextView
+                android:text="@string/playlists"
+                android:textColor="@color/colorWhite"
+                android:gravity="center_horizontal"/>
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+        </TableRow>
+    </TableLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/shuffle_all_main"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:backgroundTint="@color/colorWhite"
+            android:background="@drawable/ic_baseline_shuffle_24"/>
+        <LinearLayout
+            android:id="@+id/adv_shuffle_all_main"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:backgroundTint="@color/colorGray"
+            android:background="@drawable/rounded_corner">
+            <Button
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:backgroundTint="@color/colorSpecial"
+                android:background="@drawable/ic_baseline_shuffle_24"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:textColor="@color/colorSpecial"
+                android:text="@string/smart_shuffle"
+                android:layout_marginRight="8dp"/>
+        </LinearLayout>
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+        <Button
+            android:id="@+id/sort_options_main"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:backgroundTint="@color/colorWhite"
+            android:background="@drawable/ic_baseline_sort_24"/>
+        <Button
+            android:id="@+id/show_by_main"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:backgroundTint="@color/colorWhite"
+            android:background="@drawable/ic_baseline_view_list_24"/>
+    </LinearLayout>
 
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/viewpager"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/viewpager">
+    </androidx.viewpager.widget.ViewPager>
+
+
+
+    <LinearLayout
+        android:id="@+id/player_main"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/colorLDark">
+        <ImageView
+            android:id="@+id/art_main"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/logo"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/track_name_main"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:text="@string/track_name"
+                android:gravity="center_horizontal"
+                android:textSize="15sp"
+                android:textColor="@color/colorWhite"/>
+            <TextView
+                android:id="@+id/track_artist_main"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:text="@string/track_artist"
+                android:gravity="center_horizontal"
+                android:textSize="12sp"
+                android:textColor="@color/colorWhite"/>
+        </LinearLayout>
+        <Button
+            android:id="@+id/previous_main"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_vertical"
+            android:backgroundTint="@color/colorWhite"
+            android:background="@drawable/ic_baseline_skip_previous_24"/>
+        <Button
+            android:id="@+id/play_main"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:backgroundTint="@color/colorWhite"
+            android:background="@drawable/ic_baseline_play_arrow_24"/>
+        <Button
+            android:id="@+id/next_main"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_vertical"
+            android:backgroundTint="@color/colorWhite"
+            android:background="@drawable/ic_baseline_skip_next_24"/>
+    </LinearLayout>
 </LinearLayout>
