--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/mContainer"
-    android:background="@drawable/main_bg"
+    android:background="@color/colorDark"
     android:orientation="vertical"
     tools:context=".activity.PlayerActivity">
 
@@ -22,20 +22,36 @@
             android:id="@+id/back_btn"
             android:src="@drawable/ic_baseline_chevron_left_24"
             android:layout_alignParentStart="true"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="Now Playing"
+            android:text="@string/song_name"
+            android:id="@+id/song_name"
+            android:layout_below="@+id/card"
             android:textColor="@color/colorWhite"
-            android:layout_toEndOf="@id/back_btn"
-            android:layout_toStartOf="@+id/menu_btn"
             android:gravity="center_horizontal"
-            android:background="@android:color/transparent"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/artist"
+            android:id="@+id/song_artist"
+            android:layout_below="@+id/song_name"
+            android:textColor="@color/colorWhite"
+            android:gravity="center_horizontal"
             android:textSize="18sp"
-            android:textStyle="bold"/>
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"/>
 
         <ImageView
             android:layout_width="30dp"
@@ -43,119 +59,33 @@
             android:id="@+id/menu_btn"
             android:src="@drawable/ic_baseline_menu_24"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true" />
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
         android:id="@+id/card"
-        android:layout_below="@id/layout_top_btn">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-        <ImageView
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewpager_player"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/default_art"
-            android:scaleType="centerCrop"
-            android:id="@+id/cover_art"/>
-
-        <ImageView
+            android:layout_height="match_parent"/>
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabDots"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:id="@+id/imageViewGradient"
-            android:layout_alignParentBottom="true"/>
-    </RelativeLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="This is song name"
-        android:id="@+id/song_name"
-        android:layout_below="@+id/card"
-        android:textColor="@color/colorWhite"
-        android:gravity="center_horizontal"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:singleLine="true"
-        android:ellipsize="end"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="This is song Artist"
-        android:id="@+id/song_artist"
-        android:layout_below="@+id/song_name"
-        android:textColor="@color/colorWhite"
-        android:gravity="center_horizontal"
-        android:textSize="18sp"
-        android:singleLine="true"
-        android:ellipsize="end"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"/>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/relative_layout_for_bottom"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/gradient_bg">
-
-        <ImageView
-            android:id="@+id/id_shuffle"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_alignEnd="@id/id_prev"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="32dp"
-            android:src="@drawable/ic_baseline_shuffle_off_24" />
-
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/id_prev"
-            android:src="@drawable/ic_baseline_skip_previous_24"
-            android:layout_centerVertical="true"
-            android:layout_toStartOf="@+id/play_pause"
-            android:layout_marginStart="16dp"/>
-
-        <Button
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/play_pause"
-            android:src="@drawable/ic_baseline_play_arrow_24"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:focusable="true"
-            android:clickable="true"/>
-
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/id_next"
-            android:src="@drawable/ic_baseline_skip_next_24"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/play_pause"
-            android:layout_marginEnd="16dp"/>
-
-        <ImageView
-            android:id="@+id/id_repeat"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_alignLeft="@id/id_next"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="32dp"
-            android:src="@drawable/ic_baseline_repeat_off_24" />
+            android:layout_alignParentBottom="true"
+            app:tabBackground="@drawable/tab_selector"
+            app:tabGravity="center"
+            app:tabIndicatorHeight="0dp"/>
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_above="@id/relative_layout_for_bottom"
         android:layout_marginBottom="15dp"
         android:id="@+id/seek_bar_layout">
 
@@ -185,4 +115,62 @@
             android:layout_marginEnd="20dp"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
-</RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:id="@+id/relative_layout_for_bottom"
+        android:background="@drawable/gradient_bg">
+
+        <ImageView
+            android:id="@+id/id_shuffle"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_alignEnd="@id/id_prev"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="32dp"
+            android:src="@drawable/repeat_all"
+            android:layout_alignRight="@id/id_prev"
+            android:layout_alignParentLeft="true"
+            android:layout_marginRight="32dp" />
+
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:id="@+id/id_prev"
+            android:src="@drawable/prev"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/play_pause"
+            android:layout_marginStart="16dp"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/play_pause"
+            android:src="@drawable/ic_baseline_play_arrow_24"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:focusable="true"
+            android:clickable="true"/>
+
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:id="@+id/id_next"
+            android:src="@drawable/next"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/play_pause"
+            android:layout_marginEnd="16dp"/>
+
+        <ImageView
+            android:id="@+id/id_repeat"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_alignLeft="@id/id_next"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="32dp"
+            android:src="@drawable/shuffle_smart" />
+    </RelativeLayout>
+</LinearLayout>
