--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -164,7 +164,7 @@
             android:layout_marginEnd="16dp"/>
 
         <ImageView
-            android:id="@+id/id_repeat"
+            android:id="@+id/id_smart_shuffle"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_alignLeft="@id/id_next"
