--- a/app/src/main/res/layout/fragment_general_info.xml
+++ b/app/src/main/res/layout/fragment_general_info.xml
@@ -14,81 +14,87 @@
         android:layout_weight="1"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="@dimen/text"
-            android:layout_height="match_parent"
-            android:text="@string/song_name"/>
-        <TextView
-            android:id="@+id/track_name_info"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/rounded_corner">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/empty"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="@dimen/text"
-            android:layout_height="match_parent"
-            android:text="@string/artist"/>
-        <TextView
-            android:id="@+id/artist_info"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="@dimen/text"
+                android:layout_height="match_parent"
+                android:text="@string/song_name"/>
+            <TextView
+                android:id="@+id/track_name_info"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/empty"/>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/empty"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="@dimen/text"
-            android:layout_height="match_parent"
-            android:text="@string/album"/>
-        <TextView
-            android:id="@+id/album_info"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="@dimen/text"
+                android:layout_height="match_parent"
+                android:text="@string/artist"/>
+            <TextView
+                android:id="@+id/artist_info"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/empty"/>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/empty"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="@dimen/text"
-            android:layout_height="match_parent"
-            android:text="@string/genre"/>
-        <Spinner
-            android:id="@+id/genre_info"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="@dimen/text"
+                android:layout_height="match_parent"
+                android:text="@string/album"/>
+            <TextView
+                android:id="@+id/album_info"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/empty"/>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:entries="@array/genre"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="@dimen/text"
-            android:layout_height="match_parent"
-            android:text="@string/age"/>
-        <Spinner
-            android:id="@+id/age_info"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="@dimen/text"
+                android:layout_height="match_parent"
+                android:text="@string/genre"/>
+            <Spinner
+                android:id="@+id/genre_info"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:entries="@array/genre"/>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:entries="@array/age"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="@dimen/text"
-            android:layout_height="match_parent"
-            android:text="@string/version"/>
-        <Spinner
-            android:id="@+id/version_info"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="@dimen/text"
+                android:layout_height="match_parent"
+                android:text="@string/age"/>
+            <Spinner
+                android:id="@+id/age_info"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:entries="@array/age"/>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:entries="@array/version"/>
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="@dimen/text"
+                android:layout_height="match_parent"
+                android:text="@string/version"/>
+            <Spinner
+                android:id="@+id/version_info"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:entries="@array/version"/>
+        </LinearLayout>
     </LinearLayout>
     <Space
         android:layout_width="0dp"
